# freeit

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_original.md  README.md  freeit.yaml  pyproject.toml
charts/: README.md
charts/ingress-nginx/: Chart.yaml  values.yaml
charts/keycloak/: .helmignore  Chart.yaml  values.yaml
charts/nextcloud/: Chart.yaml  values.yaml
docs/: federation.md
docs/csv/: example.csv  niall-demo.csv  schema.md
files/: README.md
files/epics/: CLAUDE.md  E0.1-product-vision.md  E0.2-department-app-catalog.md  E1.1-iac-provider-agnostic-provisioning.md  E1.10-security-hardening-gdpr.md  E1.2-k3s-cluster-gitops.md  E1.3-identity-sso.md  E1.4-networking-dns-tls-ingress.md  E1.5-data-layer.md  E1.6-secrets-management.md  E1.7-backup-disaster-recovery.md  E1.8-observability.md  E1.9-email-smtp-deliverability.md  E2.1-csv-schema-provisioning-engine.md  E2.2-identity-provisioning-from-csv.md  E2.3-seed-data-generator.md  E2.4-golden-path-onboarding-template.md  E3.1-nextcloud-golden-path.md  E3.2-mail-calendar-surface.md  E3.3-additional-apps.md  E4.1-recruiter-onboarding-flow.md  E4.2-demo-runbook-fallback.md  E5-future-business-layer.md
gitops/: README.md
infra/: README.md
infra/bootstrap/: main.tf
infra/modules/: CONTRACT.md
provisioner/: __main__.py  engine.py  ledger.py  schema.py
provisioner/seed/: renderer.py  seeders.py  spec.py
provisioner/steps/: base.py  bootstrap_cluster.py  provision_node.py  provision_users.py  seed_data.py  (+1 more)
scripts/: bootstrap-cluster.sh  bootstrap-nextcloud.sh  bootstrap-realm.sh  verify-infra.sh
(+44 files in other folders)
