[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freeit"
version = "0.1.0"
description = "Company-in-a-CSV provisioning engine"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic[email]>=2.0",
    "requests>=2.31",
    "boto3>=1.34",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
freeit = "provisioner.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["provisioner"]

[tool.pytest.ini_options]
testpaths = ["provisioner/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
